crates/skopli-capi/include/skopli.h

/* Generated by cbindgen from skopli-capi. DO NOT EDIT BY HAND. */

#ifndef SKOPLI_H
#define SKOPLI_H

#pragma once

/* This file is auto-generated; regenerate with the crate's build (SKOPLI_GEN_HEADER=1). */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * Status returned by every fallible ABI function. Mirrors the
 * `AgStatus` contract (0 ok, 1 invalid-argument, 2 catalog, 3 internal).
 */
enum AgStatus
#if defined(__cplusplus) || __STDC_VERSION__ >= 202311L
  : int32_t
#endif // defined(__cplusplus) || __STDC_VERSION__ >= 202311L
 {
  /**
   * The call succeeded.
   */
  AG_STATUS_OK = 0,
  /**
   * A caller-supplied argument was invalid (null where required, malformed
   * UTF-8/JSON, an out-of-range date/tz, or a bad enum value).
   */
  AG_STATUS_INVALID_ARGUMENT = 1,
  /**
   * A pricing/catalog operation failed (e.g. unparseable catalog JSON).
   */
  AG_STATUS_CATALOG = 2,
  /**
   * An unexpected internal error, including a caught panic.
   */
  AG_STATUS_INTERNAL = 3,
};
#ifndef __cplusplus
#if __STDC_VERSION__ >= 202311L
typedef enum AgStatus AgStatus;
#else
typedef int32_t AgStatus;
#endif // __STDC_VERSION__ >= 202311L
#endif // __cplusplus

/**
 * The opaque pricing handle. Holds an immutable core [`Pricing`] instance
 * (injected catalogs + mode); constructed by [`ag_pricing_new`], freed by
 * [`ag_pricing_free`].
 */
typedef struct AgPricing AgPricing;

/**
 * A library-owned byte buffer handed out to the caller. `ptr` points at `len`
 * bytes of UTF-8 JSON (no trailing NUL); free it with [`ag_buf_free`]. A
 * zero/`len == 0` buffer has `ptr == null` and needs no free.
 */
typedef struct {
  /**
   * Pointer to the first byte, or null when `len == 0`.
   */
  uint8_t *ptr;
  /**
   * Length in bytes.
   */
  uintptr_t len;
} AgBuf;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * The ABI version integer. Bumped on a breaking ABI change.
 */
uint32_t ag_abi_version(void);

/**
 * The conformance `schema_version` this build emits.
 */
uint32_t ag_schema_version(void);

/**
 * A pointer to a static NUL-terminated library semver string. NEVER freed.
 */
const char *ag_version(void);

/**
 * Detect which registered harnesses have readable data reachable from the
 * context in `opts_json` (`{home?, env?}`; null = process defaults). Writes a
 * `{supported: string[], unsupported: string[]}` JSON buffer to `*out`.
 *
 * # Safety
 * `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
 * valid writable `*mut AgBuf`.
 */
AgStatus ag_detect_harnesses(const char *opts_json, uintptr_t opts_len, AgBuf *out);

/**
 * Read usage across the selected harnesses. `opts_json`
 * (`{home?, env?, harnesses?, since?, until?, tz?, subagents?}`; null =
 * defaults) drives detection/filtering. Writes an
 * `{events, diagnostics, skipped}` JSON buffer to `*out`.
 *
 * # Safety
 * See [`ag_detect_harnesses`].
 */
AgStatus ag_read_usage(const char *opts_json, uintptr_t opts_len, AgBuf *out);

/**
 * Roll up an event array by a dimension. `events_json` is a `UsageEvent[]`;
 * `opts_json` is `{by, tz?, blockMs?}`. Writes a `Rollup[]` JSON buffer to
 * `*out`.
 *
 * # Safety
 * Both JSON args describe readable buffers or (null, 0); `out` is writable.
 */
AgStatus ag_rollup(const char *events_json,
                   uintptr_t events_len,
                   const char *opts_json,
                   uintptr_t opts_len,
                   AgBuf *out);

/**
 * Compute the USD cost of a token bundle under a flat/tiered price.
 * `tokens_json` is a `TokenCounts`; `price_json` is a `ModelPrice`. Writes the
 * result to `*out` (an `f64`).
 *
 * # Safety
 * Both JSON args are non-null readable buffers; `out` is a writable `*mut f64`.
 */
AgStatus ag_cost_usd(const char *tokens_json,
                     uintptr_t tokens_len,
                     const char *price_json,
                     uintptr_t price_len,
                     double *out);

/**
 * Write the default on-disk cache directory (platform-specific) as a
 * library-owned C string to `*out`; free it with [`ag_string_free`].
 *
 * # Safety
 * `out` is a valid writable `*mut *mut c_char`.
 */
AgStatus ag_default_cache_dir(char **out);

/**
 * Construct an `AgPricing` handle from injected catalogs/overrides in
 * `opts_json` (`{mode?, overrides?, catalogs?, ...}`; null = empty). Writes the
 * handle to `*out`; free it with [`ag_pricing_free`].
 *
 * The default `libskopli` performs no network I/O: it opens no socket and
 * fetches no catalog. Callers pass pre-fetched `catalogs` (a source name plus
 * either a prices map or a raw `format`+`payload`) and price against those.
 * Built-in source fetching requires the optional `net` cargo feature (the
 * separate `libskopli-full` build). When `opts_json` asks for built-in sources
 * (`builtinSources:true`) and the library was compiled without `net`, this
 * returns [`AgStatus::Catalog`] with the `NoBuiltinSources` error message
 * recorded via [`ag_last_error_message`].
 *
 * # Safety
 * `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
 * valid writable `*mut *mut AgPricing`.
 */
AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out);

/**
 * Free an `AgPricing` handle. Passing null is a safe no-op.
 *
 * # Safety
 * `pricing` must be a handle from [`ag_pricing_new`] not yet freed, or null.
 */
void ag_pricing_free(AgPricing *pricing);

/**
 * Price an event batch grouped by the option dimension. `events_json` is a
 * `UsageEvent[]`; `opts_json` is `{by, tz?, blockMs?}`. Writes a
 * `PricedEventGroup[]` JSON buffer to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; the JSON args describe readable buffers or
 * (null, 0); `out` is writable.
 */
AgStatus ag_pricing_price_events(const AgPricing *pricing,
                                 const char *events_json,
                                 uintptr_t events_len,
                                 const char *opts_json,
                                 uintptr_t opts_len,
                                 AgBuf *out);

/**
 * Look up a single model's price. `model`/`model_len` describe a bare UTF-8
 * model-name buffer (NOT JSON); a null or empty buffer is an invalid argument.
 * Writes a single `PriceLookup` JSON object (a `{priced:true, ...}` hit or a
 * `{priced:false, ...}` miss) to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; `model`/`model_len` describe a readable buffer;
 * `out` is writable.
 */
AgStatus ag_pricing_lookup_model(const AgPricing *pricing,
                                 const char *model,
                                 uintptr_t model_len,
                                 AgBuf *out);

/**
 * Price a set of rollups. `rollups_json`/`rollups_len` describe a `Rollup[]`
 * JSON body, the same shape [`ag_rollup`] emits. Writes a `PricedRollup[]` JSON
 * buffer to `*out`: each element is the caller's original rollup object with a
 * `pricing` field attached (a hit with an optional `tieredAggregate`, or a
 * miss). Parse/catalog failures map to [`AgStatus::Catalog`].
 *
 * # Safety
 * `pricing` is a live handle; `rollups_json`/`rollups_len` describe a readable
 * buffer or (null, 0); `out` is writable.
 */
AgStatus ag_pricing_price_rollups(const AgPricing *pricing,
                                  const char *rollups_json,
                                  uintptr_t rollups_len,
                                  AgBuf *out);

/**
 * Write the provenance of the handle's catalogs as a `CatalogInfo[]` JSON
 * buffer to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; `out` is writable.
 */
AgStatus ag_pricing_catalog_info(const AgPricing *pricing, AgBuf *out);

/**
 * Free a library-owned buffer previously returned in an `AgBuf* out`. Passing a
 * zero buffer (`ptr == null`) is a safe no-op. Double-freeing or freeing a
 * buffer the library did not produce is undefined behavior.
 *
 * # Safety
 * `buf` must be a buffer produced by this library and not yet freed, or the
 * empty buffer.
 */
void ag_buf_free(AgBuf buf);

/**
 * Free a library-owned C string previously returned via a `char** out`. Passing
 * null is a safe no-op.
 *
 * # Safety
 * `s` must be a string produced by this library (via `ag_last_error_message` or
 * `ag_default_cache_dir`) and not yet freed, or null.
 */
void ag_string_free(char *s);

/**
 * Write this thread's last error detail (a heap C string) to `*out`, or write
 * null when no error has been recorded on this thread. The written string is
 * library-owned; free it with [`ag_string_free`]. Returns
 * [`AgStatus::InvalidArgument`] if `out` is null.
 *
 * # Safety
 * `out` must be a valid, writable `*mut *mut c_char` or null.
 */
AgStatus ag_last_error_message(char **out);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* SKOPLI_H */