sdks/csharp/Skopli/Native/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace Skopli.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "skopli";





        /// <summary>
        ///  The ABI version integer. Bumped on a breaking ABI change.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_abi_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint ag_abi_version();

        /// <summary>
        ///  The conformance `schema_version` this build emits.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_schema_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern uint ag_schema_version();

        /// <summary>
        ///  A pointer to a static NUL-terminated library semver string. NEVER freed.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* ag_version();

        /// <summary>
        ///  Detect which registered harnesses have readable data reachable from the
        ///  context in `opts_json` (`{home?, env?}`; null = process defaults). Writes a
        ///  `{supported: string[], unsupported: string[]}` JSON buffer to `*out`.
        ///
        ///  # Safety
        ///  `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
        ///  valid writable `*mut AgBuf`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_detect_harnesses", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_detect_harnesses(byte* opts_json, nuint opts_len, AgBuf* @out);

        /// <summary>
        ///  Read usage across the selected harnesses. `opts_json`
        ///  (`{home?, env?, harnesses?, since?, until?, tz?, subagents?}`; null =
        ///  defaults) drives detection/filtering. Writes an
        ///  `{events, diagnostics, skipped}` JSON buffer to `*out`.
        ///
        ///  # Safety
        ///  See [`ag_detect_harnesses`].
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_read_usage", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_read_usage(byte* opts_json, nuint opts_len, AgBuf* @out);

        /// <summary>
        ///  Roll up an event array by a dimension. `events_json` is a `UsageEvent[]`;
        ///  `opts_json` is `{by, tz?, blockMs?}`. Writes a `Rollup[]` JSON buffer to
        ///  `*out`.
        ///
        ///  # Safety
        ///  Both JSON args describe readable buffers or (null, 0); `out` is writable.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_rollup", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_rollup(byte* events_json, nuint events_len, byte* opts_json, nuint opts_len, AgBuf* @out);

        /// <summary>
        ///  Compute the USD cost of a token bundle under a flat/tiered price.
        ///  `tokens_json` is a `TokenCounts`; `price_json` is a `ModelPrice`. Writes the
        ///  result to `*out` (an `f64`).
        ///
        ///  # Safety
        ///  Both JSON args are non-null readable buffers; `out` is a writable `*mut f64`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_cost_usd", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_cost_usd(byte* tokens_json, nuint tokens_len, byte* price_json, nuint price_len, double* @out);

        /// <summary>
        ///  Write the default on-disk cache directory (platform-specific) as a
        ///  library-owned C string to `*out`; free it with [`ag_string_free`].
        ///
        ///  # Safety
        ///  `out` is a valid writable `*mut *mut c_char`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_default_cache_dir", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_default_cache_dir(byte** @out);

        /// <summary>
        ///  Construct an `AgPricing` handle from injected catalogs/overrides in
        ///  `opts_json` (`{mode?, overrides?, catalogs?, ...}`; null = empty). Writes the
        ///  handle to `*out`; free it with [`ag_pricing_free`].
        ///
        ///  The default `libskopli` performs no network I/O: it opens no socket and
        ///  fetches no catalog. Callers pass pre-fetched `catalogs` (a source name plus
        ///  either a prices map or a raw `format`+`payload`) and price against those.
        ///  Built-in source fetching requires the optional `net` cargo feature (the
        ///  separate `libskopli-full` build). When `opts_json` asks for built-in sources
        ///  (`builtinSources:true`) and the library was compiled without `net`, this
        ///  returns [`AgStatus::Catalog`] with the `NoBuiltinSources` error message
        ///  recorded via [`ag_last_error_message`].
        ///
        ///  # Safety
        ///  `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
        ///  valid writable `*mut *mut AgPricing`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_pricing_new(byte* opts_json, nuint opts_len, AgPricing** @out);

        /// <summary>
        ///  Free an `AgPricing` handle. Passing null is a safe no-op.
        ///
        ///  # Safety
        ///  `pricing` must be a handle from [`ag_pricing_new`] not yet freed, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ag_pricing_free(AgPricing* pricing);

        /// <summary>
        ///  Price an event batch grouped by the option dimension. `events_json` is a
        ///  `UsageEvent[]`; `opts_json` is `{by, tz?, blockMs?}`. Writes a
        ///  `PricedEventGroup[]` JSON buffer to `*out`.
        ///
        ///  # Safety
        ///  `pricing` is a live handle; the JSON args describe readable buffers or
        ///  (null, 0); `out` is writable.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_price_events", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_pricing_price_events(AgPricing* pricing, byte* events_json, nuint events_len, byte* opts_json, nuint opts_len, AgBuf* @out);

        /// <summary>
        ///  Look up a single model's price. `model`/`model_len` describe a bare UTF-8
        ///  model-name buffer (NOT JSON); a null or empty buffer is an invalid argument.
        ///  Writes a single `PriceLookup` JSON object (a `{priced:true, ...}` hit or a
        ///  `{priced:false, ...}` miss) to `*out`.
        ///
        ///  # Safety
        ///  `pricing` is a live handle; `model`/`model_len` describe a readable buffer;
        ///  `out` is writable.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_lookup_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_pricing_lookup_model(AgPricing* pricing, byte* model, nuint model_len, AgBuf* @out);

        /// <summary>
        ///  Price a set of rollups. `rollups_json`/`rollups_len` describe a `Rollup[]`
        ///  JSON body, the same shape [`ag_rollup`] emits. Writes a `PricedRollup[]` JSON
        ///  buffer to `*out`: each element is the caller's original rollup object with a
        ///  `pricing` field attached (a hit with an optional `tieredAggregate`, or a
        ///  miss). Parse/catalog failures map to [`AgStatus::Catalog`].
        ///
        ///  # Safety
        ///  `pricing` is a live handle; `rollups_json`/`rollups_len` describe a readable
        ///  buffer or (null, 0); `out` is writable.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_price_rollups", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_pricing_price_rollups(AgPricing* pricing, byte* rollups_json, nuint rollups_len, AgBuf* @out);

        /// <summary>
        ///  Write the provenance of the handle's catalogs as a `CatalogInfo[]` JSON
        ///  buffer to `*out`.
        ///
        ///  # Safety
        ///  `pricing` is a live handle; `out` is writable.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_pricing_catalog_info", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_pricing_catalog_info(AgPricing* pricing, AgBuf* @out);

        /// <summary>
        ///  Free a library-owned buffer previously returned in an `AgBuf* out`. Passing a
        ///  zero buffer (`ptr == null`) is a safe no-op. Double-freeing or freeing a
        ///  buffer the library did not produce is undefined behavior.
        ///
        ///  # Safety
        ///  `buf` must be a buffer produced by this library and not yet freed, or the
        ///  empty buffer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_buf_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ag_buf_free(AgBuf buf);

        /// <summary>
        ///  Free a library-owned C string previously returned via a `char** out`. Passing
        ///  null is a safe no-op.
        ///
        ///  # Safety
        ///  `s` must be a string produced by this library (via `ag_last_error_message` or
        ///  `ag_default_cache_dir`) and not yet freed, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_string_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void ag_string_free(byte* s);

        /// <summary>
        ///  Write this thread's last error detail (a heap C string) to `*out`, or write
        ///  null when no error has been recorded on this thread. The written string is
        ///  library-owned; free it with [`ag_string_free`]. Returns
        ///  [`AgStatus::InvalidArgument`] if `out` is null.
        ///
        ///  # Safety
        ///  `out` must be a valid, writable `*mut *mut c_char` or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "ag_last_error_message", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern AgStatus ag_last_error_message(byte** @out);


    }

    /// <summary>
    ///  The opaque pricing handle. Holds an immutable core [`Pricing`] instance
    ///  (injected catalogs + mode); constructed by [`ag_pricing_new`], freed by
    ///  [`ag_pricing_free`].
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct AgPricing
    {
    }

    /// <summary>
    ///  A library-owned byte buffer handed out to the caller. `ptr` points at `len`
    ///  bytes of UTF-8 JSON (no trailing NUL); free it with [`ag_buf_free`]. A
    ///  zero/`len == 0` buffer has `ptr == null` and needs no free.
    /// </summary>
    [StructLayout(LayoutKind.Sequential)]
    internal unsafe partial struct AgBuf
    {
        /// <summary>
        ///  Pointer to the first byte, or null when `len == 0`.
        /// </summary>
        public byte* ptr;
        /// <summary>
        ///  Length in bytes.
        /// </summary>
        public nuint len;
    }


    /// <summary>
    ///  Status returned by every fallible ABI function. Mirrors the
    ///  `AgStatus` contract (0 ok, 1 invalid-argument, 2 catalog, 3 internal).
    /// </summary>
    internal enum AgStatus : int
    {
        /// <summary>
        ///  The call succeeded.
        /// </summary>
        Ok = 0,
        /// <summary>
        ///  A caller-supplied argument was invalid (null where required, malformed
        ///  UTF-8/JSON, an out-of-range date/tz, or a bad enum value).
        /// </summary>
        InvalidArgument = 1,
        /// <summary>
        ///  A pricing/catalog operation failed (e.g. unparseable catalog JSON).
        /// </summary>
        Catalog = 2,
        /// <summary>
        ///  An unexpected internal error, including a caught panic.
        /// </summary>
        Internal = 3,
    }


}
